# agenticSystemsLab

./: API_USAGE.md  EXPECTED_OUTPUT.md  requirements.txt
advanced_workflow/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  test_anthropic_scraper.py  test_transcript.py  test_youtube_scraper.py
advanced_workflow/.claude/commands/: add-source.md  db-check.md  deploy-check.md  feature.md  review.md  security.md  setup-phase.md  structure.md  test.md
advanced_workflow/app/: __init__.py  __main__.py  db.py
advanced_workflow/app/agent/: __init__.py
advanced_workflow/app/config/: __init__.py  config_loader.py
advanced_workflow/app/database/: __init__.py  connections.py  createTables.py  models.py  repository.py
advanced_workflow/app/models/: __init__.py  aggregated_content.py  transcript.py
advanced_workflow/app/scrapers/: __init__.py  anthropic_scraper.py  youtube_scraper.py
advanced_workflow/app/services/: __init__.py  orchestrator.py  youtube_transcript.py
advanced_workflow/config/: __init__.py  sources.yaml
advanced_workflow/scripts/: __init__.py  init.sql  run_aggregation.py
advanced_workflow/specs/: anthropic-blog-scraper.md  app-simplification.md  database-setup.md
basics/: basicCall.py  data.json  retrievalCall.py  structuredCall.py  toolCall.py
patterns/: prompt-chaining.py  prompt_chaining_IT_mermaid.md  prompt_chaining_IT_review.py  prompt_chaining_review.md  prompt_chaining_reviews.py  reviewData.json  reviewITData.json  routing.py
workflows/: db_assistant.py  db_assistant_fastapi.py
(+1 files in other folders)
